load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add.go",
        "move.go",
        "remove.go",
        "rename.go",
        "replace.go",
    ],
    importpath = "yext/m4/confcode/cmd/sud/filesystem",
    visibility = ["//visibility:public"],
    deps = [
        "//gocode/src/yext/m4/confcode/cmd/sud/json:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
    ],
)
