load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "add.go",
        "move.go",
        "patch.go",
        "remove.go",
        "rename.go",
        "replace.go",
        "value.go",
    ],
    importpath = "yext/m4/confcode/cmd/sud/json",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_json_iterator_go//:go_default_library",
        "@com_github_saurabhaditya_json_patch//:go_default_library",
        "@com_github_xeipuuv_gojsonpointer//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "add_test.go",
        "move_test.go",
        "remove_test.go",
        "rename_test.go",
        "replace_test.go",
        "value_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
